Basic structure in place with callout and testimonials completed

--- a/index.html
+++ b/index.html
@@ -8,17 +8,273 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/913b585bc7.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Lee House - Mixing & Mastering</title>
+    <title>Lee House | Mixing & Mastering</title>
 </head>
 
 <body>
     <header>
+        <div class="container-fluid navalert-container">
+            <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+                <a href="#home" id="section-1" class="navbar-brand">Lee House <span class="tag-line">Mixing &
+                        Mastering</span></a>
+
+                <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
+                    data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span></button>
+
+                <div class="d-none d-md-block ml-auto collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item mr-2"><a class="nav-link" href="#testimonials"
+                                id="section-2">Testimonials</a></li>
+                        <li class="nav-item mr-2"><a class="nav-link" href="#showreel" id="section-3">Showreel</a>
+                        </li>
+                        <li class="nav-item mr-2"><a class="nav-link" href="#about" id="section-4">About</a></li>
+                        <li class="nav-item mr-2"><a class="nav-link" href="#contact" id="section-5">Contact</a></li>
+                    </ul>
+                    <img src="assets/images/lee-house-logo-50px.png" width="50" height="50" class="d-inline-block"
+                        alt="website logo">
+                </div>
+            </nav>
+        </div>
+
 
     </header>
     <section>
-        Hello world!
+        <div id="home" class="container-fluid callout-container">
+            <div class="opaque-overlay">&nbsp;</div>
+            <div class="row">
+                <div class="col-12">
+                    <section class="callout jumbotron text-center">
+                        <h1 class="jumbotron-header">My mixes have 45+ million streams on Spotify alone.</h1>
+                        <hr class="block-divider block-divider--white">
+                        <p class="jumbo-tag-line">Make your music stand out...
+                    </section>
+                </div>
+                <hr>
+                <div class="col-3 info-box text-center vertical-divider">
+                    <i class="far fa-clock info-icon"></i>
+                    <p>10+ years experience</p>
+                </div>
+                <div class="col-3 info-box text-center vertical-divider">
+                    <i class="fas fa-microphone info-icon"></i>
+                    <p>1000+ mixes to date</p>
+                </div>
+                <div class="col-3 info-box text-center vertical-divider">
+                    <i class="fas fa-music info-icon"></i>
+                    <p>Variety of genres</p>
+                </div>
+                <div class="col-3 info-box text-center">
+                    <i class="fas fa-pound-sign info-icon"></i>
+                    <p>£150 average mix & master price</p>
+                    <p class="contact-for-quote">(Contact for quote)</p>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <!-- Testimonials -->
+    <section>
+        <div id="testimonials" class="container-wrapper--orange container-spacing">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="text-uppercase">Testimonials:</h2>
+                    </div>
+                </div>
+                <hr class="block-divider">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="card d-flex mx-auto">
+                            <div class="card-image"> <img class="img-fluid d-flex mx-auto"
+                                    src="assets/images/amy-wadge.jpeg"> </div>
+                            <div class="card-text">
+                                <div class="card-name">Amy Wadge</div>
+                                <p></p>
+                                <div class="card-testimonial">Lee is an asset to any room; as an engineer, a writer and
+                                    a
+                                    producer he brings so much
+                                    to the table and is able to pivot to whatever is needed in the moment. He has a
+                                    wealth
+                                    of knowledge and experience that makes him invaluable and he’s also the loveliest
+                                    bloke
+                                    ever which is a bonus.</div>
+                            </div>
+                            <div class="job-role">- Songwriter <i>(Ed
+                                    Sheeran, John Legend, Alecia Keys)</i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card d-flex ml-auto">
+                            <div class="card-image"> <img class="img-fluid d-flex ml-auto"
+                                    src="assets/images/xy&o.jpeg"> </div>
+                            <div class="card-text">
+                                <div class="card-name">XY&O</div>
+                                <p></p>
+                                <div class="card-testimonial">No one has been able to mix our records and improve the
+                                    dynamics of our sound like Lee; he's our go-to man! He's not just an engineer, he
+                                    can apply his experience as a music creator to making the mix part of the creative
+                                    process of the song, everything is always balanced, clear and focused.</div>
+                            </div>
+                            <div class="job-role">- Pop Band <i>(Kobalt Music Publishing)</i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card d-flex mx-auto">
+                            <div class="card-image"> <img class="img-fluid d-flex mx-auto"
+                                    src="assets/images/sam-ryder.jpeg"> </div>
+                            <div class="card-text">
+                                <div class="card-name">Sam Ryder</div>
+                                <p></p>
+                                <div class="card-testimonial">Lee brings a wonderful, positive vibe to the studio. From
+                                    the moment you meet him you realise that you’ve not only become friends with one of
+                                    the world’s good guys, but are working with someone who cares about the project as
+                                    much as you do. Big up Lee!
+                                </div>
+                            </div>
+                            <div class="job-role">- Artist <i>(Parlaphone Records, TikTok Superstar)</i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card d-flex ml-auto">
+                            <div class="card-image"> <img class="img-fluid d-flex ml-auto"
+                                    src="assets/images/dom-kane.jpeg"> </div>
+                            <div class="card-text">
+                                <div class="card-name">Dom Kane</div>
+                                <p></p>
+                                <div class="card-testimonial">Lee has very specialised vocal production skills and I can  always trust him to create outstanding vocal mixes that are focused in a way that only someone with good vocal ability understands.</div>
+                            </div>
+                            <div class="job-role">- EDM Artist <i>(Mau5Trap Records, 5302 Records)</i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div id="showreel" class="container-wrapper--orange container-spacing showreel-container">
+            <div class="opaque-overlay">&nbsp;</div>
+            <<div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="text-uppercase">Showreel:</h2>
+                    </div>
+                    <hr class="block-divider">
+                    <div class="col-12 content-text">
+                        A uniquely modern music producer who is quickly establishing himself for his fresh sounding pop
+                        production and superb engineering dexterity; Lee has wide array of skills at his disposal
+                        including
+                        electronic sound design, beat programming, orchestral composition and vocal expertise as an
+                        accomplished singer in his own right. He specialises in creating electronically driven music
+                        with
+                        close attention paid to synthesiser sound trends, however with years of experience as the lead
+                        audio
+                        engineer and producer at the established Cardiff based studio 'Acapela', he had the chance to
+                        work
+                        with many great acoustic and instrumental artists spanning over many different genres and has
+                        combined his passion for electronic music with his experience in acoustic music to create an
+                        exclusive and carefully blended combination that gives him a strong and unique identity that is
+                        grabbing the attention of fresh and upcoming artists looking to achieve chart ready productions
+                        that
+                        stand out.
+
+                        As well as his outstanding music production, Lee has proven that he can apply is hand to all
+                        things
+                        music related with a proven track record in songwriting, film composition, sound engineering,
+                        live
+                        electronic performance and session vocals.
+                    </div>
+                </div>
+        </div>
+    </section>
+
+    <section>
+        <div id="about" class="container-wrapper--white container-spacing">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="text-uppercase">About:</h2>
+                    </div>
+                    <hr class="block-divider">
+                    <div class="col-12 content-text">
+                        <img src="assets/images/lee-house-promo.jpg" alt="Lee House Promo Image" id="lee-promo-image">
+                        A uniquely modern music producer who is quickly establishing himself for his fresh sounding pop
+                        production and superb engineering dexterity; Lee has wide array of skills at his disposal
+                        including
+                        electronic sound design, beat programming, orchestral composition and vocal expertise as an
+                        accomplished singer in his own right. He specialises in creating electronically driven music
+                        with
+                        close attention paid to synthesiser sound trends, however with years of experience as the lead
+                        audio
+                        engineer and producer at the established Cardiff based studio 'Acapela', he had the chance to
+                        work
+                        with many great acoustic and instrumental artists spanning over many different genres and has
+                        combined his passion for electronic music with his experience in acoustic music to create an
+                        exclusive and carefully blended combination that gives him a strong and unique identity that is
+                        grabbing the attention of fresh and upcoming artists looking to achieve chart ready productions
+                        that
+                        stand out.
+
+                        As well as his outstanding music production, Lee has proven that he can apply is hand to all
+                        things
+                        music related with a proven track record in songwriting, film composition, sound engineering,
+                        live
+                        electronic performance and session vocals. For more information and examples of work please take
+                        a
+                        look in the 'services' section.
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <section>
+        <div id="contact" class="container-wrapper--orange container-spacing showreel-container">
+            <div class="opaque-overlay">&nbsp;</div>
+            <<div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="text-uppercase">Contact:</h2>
+                    </div>
+                    <hr class="block-divider">
+                    <div class="col-12 content-text">
+                        A uniquely modern music producer who is quickly establishing himself for his fresh sounding pop
+                        production and superb engineering dexterity; Lee has wide array of skills at his disposal
+                        including
+                        electronic sound design, beat programming, orchestral composition and vocal expertise as an
+                        accomplished singer in his own right. He specialises in creating electronically driven music
+                        with
+                        close attention paid to synthesiser sound trends, however with years of experience as the lead
+                        audio
+                        engineer and producer at the established Cardiff based studio 'Acapela', he had the chance to
+                        work
+                        with many great acoustic and instrumental artists spanning over many different genres and has
+                        combined his passion for electronic music with his experience in acoustic music to create an
+                        exclusive and carefully blended combination that gives him a strong and unique identity that is
+                        grabbing the attention of fresh and upcoming artists looking to achieve chart ready productions
+                        that
+                        stand out.
+
+                        As well as his outstanding music production, Lee has proven that he can apply is hand to all
+                        things
+                        music related with a proven track record in songwriting, film composition, sound engineering,
+                        live
+                        electronic performance and session vocals. For more information and examples of work please take
+                        a
+                        look in the 'services' section.
+                    </div>
+                </div>
+        </div>
+    </section>
+
     <footer>
 
     </footer>
