W3C Validation Complete, iframe errors resolved

--- a/index.html
+++ b/index.html
@@ -5,19 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-    </script>
     <script src="https://kit.fontawesome.com/913b585bc7.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -30,7 +20,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
                 <a href="#home" id="section-1" class="navbar-brand">Lee House // <span
-                        class="tag-line d-md-inline">Mixing
+                        class="tag-line d-lg-inline">Mixing
                         &
                         Mastering</span></a>
                 <div class="ml-auto collapse navbar-collapse" id="collapsible-navbar">
@@ -41,8 +31,8 @@
                         </li>
                         <li class="nav-item mr-2"><a class="nav-link" href="#about" id="section-4">About</a></li>
                         <li class="nav-item mr-2"><a class="nav-link" href="#contact" id="section-5">Contact</a></li>
-                        <li class="nav-item mr-2"><img src="assets/images/lee-house-logo-50px.png" width="50"
-                                height="50" class="d-none d-md-block " aria-hidden="true"></li>
+                        <li class="nav-item mr-2"><img src="assets/images/lee-house-logo-50px.png" alt="Lee House Logo"
+                                width="50" height="50" class="d-none d-md-block " aria-hidden="true"></li>
                     </ul>
                 </div>
 
@@ -63,7 +53,7 @@
                     <div class="callout jumbotron text-center">
                         <h1 class="jumbotron-header">My mixes have 45+ million streams on Spotify alone.</h1>
                         <hr class="block-divider block-divider--white">
-                        <p class="jumbo-tag-line">Make your music stand out...
+                        <p class="jumbo-tag-line">Make your music stand out...</p>
                     </div>
                 </div>
                 <hr>
@@ -81,7 +71,7 @@
                 </div>
                 <div class="col-3 info-box text-center">
                     <i class="fas fa-pound-sign info-icon"></i>
-                    <p>£150 average mix & master price</p>
+                    <p>£175 average mix & master price</p>
                     <p class="contact-for-quote d-none d-md-block">(Contact for quote)</p>
                 </div>
             </div>
@@ -104,7 +94,7 @@
                     <div class="col-xl-3 col-lg-6 col-md-6">
                         <div class="card d-flex mx-auto">
                             <div class="card-image"> <img class="img-fluid d-flex mx-auto"
-                                    src="assets/images/amy-wadge-low-res.jpg"> </div>
+                                    src="assets/images/amy-wadge-low-res.jpg" alt="Amy Wadge Testimonial Photo"> </div>
                             <div class="card-text">
                                 <div class="card-name">Amy Wadge</div>
                                 <p></p>
@@ -127,7 +117,7 @@
                     <div class="col-xl-3 col-lg-6 col-md-6">
                         <div class="card d-flex mx-auto">
                             <div class="card-image"> <img class="img-fluid d-flex mx-auto"
-                                    src="assets/images/sam-ryder.jpeg"> </div>
+                                    src="assets/images/sam-ryder.jpeg" alt="Sam Ryder Testimonial Photo"> </div>
                             <div class="card-text">
                                 <div class="card-name">Sam Ryder</div>
                                 <p></p>
@@ -147,7 +137,7 @@
                     <div class="col-xl-3 col-lg-6 col-md-6">
                         <div class="card d-flex ml-auto">
                             <div class="card-image"> <img class="img-fluid d-flex ml-auto"
-                                    src="assets/images/xy&o-low-res.jpg"> </div>
+                                    src="assets/images/xy&o-low-res.jpg" alt="XY&O Testimonial Photo"> </div>
                             <div class="card-text">
                                 <div class="card-name">XY&O</div>
                                 <p></p>
@@ -166,7 +156,7 @@
                     <div class="col-xl-3 col-lg-6 col-md-6">
                         <div class="card d-flex ml-auto">
                             <div class="card-image"> <img class="img-fluid d-flex ml-auto"
-                                    src="assets/images/dom-kane.jpeg"> </div>
+                                    src="assets/images/dom-kane.jpeg" alt="Dom Kane Testimonial Photo"> </div>
                             <div class="card-text">
                                 <div class="card-name">Dom Kane</div>
                                 <p></p>
@@ -198,39 +188,40 @@
                 </div>
                 <div class="row">
                     <div class="col-xl-3 col-lg-6 col-md-6">
-                        <iframe src="https://audiomack.com/embed/song/simi/duduke-francais?background=1" scrolling="no"
-                            width="100%" height="252" scrollbars="no" frameborder="0"></iframe>
+                        <iframe class="audio-iframe"
+                            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1013985838&color=%23f05f40&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                     </div>
                     <div class="col-xl-3 col-lg-6 col-md-6">
-                        <iframe src="https://audiomack.com/embed/song/simi/duduke-francais?background=1" scrolling="no"
-                            width="100%" height="252" scrollbars="no" frameborder="0"></iframe>
+
+                        <iframe class="audio-iframe"
+                            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1013983075&color=%23f05f40&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                     </div>
                     <div class="col-xl-3 col-lg-6 col-md-6">
-                        <iframe src="https://audiomack.com/embed/song/simi/duduke-francais?background=1" scrolling="no"
-                            width="100%" height="252" scrollbars="no" frameborder="0"></iframe>
+                        <iframe class="audio-iframe"
+                            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1013923360&color=%23f05f40&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                     </div>
                     <div class="col-xl-3 col-lg-6 col-md-6">
-                        <iframe src="https://audiomack.com/embed/song/simi/duduke-francais?background=1" scrolling="no"
-                            width="100%" height="252" scrollbars="no" frameborder="0"></iframe>
+                        <iframe class="audio-iframe"
+                            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/818830069&color=%23f05f40&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                     </div>
                 </div>
                 <hr class="block-divider">
                 <div class="row">
                     <div class="col-xl-3 col-lg-6 col-md-6">
-                        <iframe src="https://audiomack.com/embed/song/simi/duduke-francais?background=1" scrolling="no"
-                            width="100%" height="252" scrollbars="no" frameborder="0"></iframe>
+                        <iframe class="audio-iframe"
+                            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/818830039&color=%23f05f40&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                     </div>
                     <div class="col-xl-3 col-lg-6 col-md-6">
-                        <iframe src="https://audiomack.com/embed/song/simi/duduke-francais?background=1" scrolling="no"
-                            width="100%" height="252" scrollbars="no" frameborder="0"></iframe>
+                        <iframe class="audio-iframe"
+                            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/818830045&color=%23f05f40&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                     </div>
                     <div class="col-xl-3 col-lg-6 col-md-6">
-                        <iframe src="https://audiomack.com/embed/song/simi/duduke-francais?background=1" scrolling="no"
-                            width="100%" height="252" scrollbars="no" frameborder="0"></iframe>
+                        <iframe class="audio-iframe"
+                            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/818830084&color=%23f05f40&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                     </div>
                     <div class="col-xl-3 col-lg-6 col-md-6">
-                        <iframe src="https://audiomack.com/embed/song/simi/duduke-francais?background=1" scrolling="no"
-                            width="100%" height="252" scrollbars="no" frameborder="0"></iframe>
+                        <iframe class="audio-iframe"
+                            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/818830057&color=%23f05f40&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                     </div>
                 </div>
             </div>
@@ -251,10 +242,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-12">
-                        <img src="assets/images/lee-house-promo.jpg" alt="Lee House Promo Image" id="lee-promo-image">
+                        <img src="assets/images/lee-house-promo.jpg" alt="Lee House About Image" id="lee-promo-image">
                     </div>
                     <div class="col-md-6 col-sm-12">
-                        <p style="text-align:justify; line-height: 1.8rem;">After obtaining a first class degree in Audio Engineering in 2011, Lee was quickly snapped up
+                        <p style="text-align:justify; line-height: 1.8rem;">After obtaining a first class degree in
+                            Audio Engineering in 2011, Lee was quickly snapped up
                             by commercial studio ‘Acapela’ based in Cardiff and was later promoted to lead engineer
                             where he was given the opportunity to work with many amazing artists spanning a wide variety
                             of genre's including Pop, Dance, Rock, Electronic, Folk, Metal, Classical.<br> Since 2014
@@ -262,18 +254,20 @@
                             the world where his mixes have tallied over 45 million plays on Spotify alone as well as
                             plays on national radio stations such as BBC Radio 1, 2 and 6Music.</p>
 
-                        <p style="text-align:justify; line-height: 1.8rem;">With regards to his mixing style, Lee treats his mixes with surgical precision; shaping
+                        <p style="text-align:justify; line-height: 1.8rem;">With regards to his mixing style, Lee treats
+                            his mixes with surgical precision; shaping
                             dynamics, frequencies and stereo positioning for each instrument so that everything is
                             clear, concise and has its own space in the mix. When needed he can make a track sound huge
                             and bombastic inline with massive chart hits whilst still adhering to the importance of
                             maintaining dynamic intergrity.</p>
 
                         <p style="text-align:justify; line-height: 1.8rem;"><i>Previous clients include:
-                            <br>
-                            Amy Wadge, Sam Ryder, Adam Lambert (Queen), John Adams, XY&O, Catrin Finch, Gruff Rhys,
-                            Cerys
-                            Matthews, Rusty Shackle, Dom Kane, Armada Records, Parlaphone Records, Universal Records,
-                            Deutsche Grammophon, The BBC, ITV and Channel 4.</i></p>
+                                <br>
+                                Amy Wadge, Sam Ryder, Adam Lambert (Queen), John Adams, XY&O, Catrin Finch, Gruff Rhys,
+                                Cerys
+                                Matthews, Rusty Shackle, Dom Kane, Armada Records, Parlaphone Records, Universal
+                                Records,
+                                Deutsche Grammophon, The BBC, ITV and Channel 4.</i></p>
                     </div>
                 </div>
             </div>
@@ -294,29 +288,29 @@
             <div class="container contact-container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
-                        <form method="post">
+                        <form action="https://formdump.codeinstitute.net" method="POST">
                             <h3>Let's work together:</h3>
                             <div class="form-group">
                                 <input type="text" name="txtName" class="form-control" placeholder="Your Name *"
-                                    value="" />
+                                    required>
                             </div>
                             <div class="form-group">
                                 <input type="text" name="txtEmail" class="form-control" placeholder="Your Email *"
-                                    value="" />
+                                    required>
                             </div>
                             <div class="form-group">
                                 <textarea name="txtMsg" class="form-control" placeholder="Your Message *"
-                                    style="width: 100%; height: 300px;"></textarea>
+                                    style="width: 100%; height: 300px;" required></textarea>
                             </div>
                             <div class="form-group">
-                                <input type="submit" name="btnSubmit" class="btn btn-dark" value="Send" />
+                                <input type="submit" name="btnSubmit" class="btn btn-dark btn-success" value="Send" />
                             </div>
                         </form>
                     </div>
                     <div class="col-lg-6 col-md-12 d-none d-md-block" id="google-maps">
-                        <iframe
+                        <iframe class="google-maps-iframe"
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2485.676545662613!2d-3.1718763840116173!3d51.464094879628085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486e034851e64d23%3A0x9caf762d1c1824f0!2sDouglas%20Buildings%2C%20Royal%20Stuart%20Ln%2C%20Cardiff%20CF10%205EL!5e0!3m2!1sen!2suk!4v1624022686344!5m2!1sen!2suk"
-                            width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+                            allowfullscreen="" loading="lazy">
                         </iframe>
                     </div>
                 </div>
@@ -362,6 +356,15 @@
         </div>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
